--- a/serviceLibrary/build.gradle
+++ b/serviceLibrary/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.core:core-ktx:1.13.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "androidx.work:work-runtime-ktx:2.9.1"
     implementation "com.github.AppDevNext.Logcat:LogcatCoreLib:$logcatVersion"
